php/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-nginx-app
spec:
  replicas: 1
  # 1. Düzeltme: Selector eklenmeli ve label ile eşleşmeli
  selector:
    matchLabels:
      app: php-nginx
  template:
    metadata:
      # 2. Düzeltme: Buradaki label, yukarıdaki selector ile BİREBİR aynı olmalı
      labels:
        app: php-nginx
    spec:
      containers:
        - name: php-fpm
          image: mahmutbayri/k8s-php-app:v3
          volumeMounts:
            - name: shared-code
              mountPath: /var/www/html
            - name: log-volume
              mountPath: /var/www/html/logs
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-code
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
            - name: log-volume
              mountPath: /var/www/html/logs
      volumes:
        - name: shared-code
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: log-volume
          persistentVolumeClaim:
            claimName: php-log-pvc
