php/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: php-nginx
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
  annotations:
    # Nginx controller kullandığını netleştiriyoruz
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: php-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-service # Service adınla birebir aynı olmalı
                port:
                  number: 80     # Service'in dışa bakan portu
